--- a/style.css
+++ b/style.css
@@ -1,23 +1,85 @@
+ul,ol{list-style: none;}
+*{margin: 0;padding:0;}
+
+.icon {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
 #xxx{
-    background:green;
     display:block;
-    width:100vw;
-     height:100vh; 
+    position:fixed;
+    top:0;
+    left:0;
+   
   }
   body{
     margin:0px;
+    overflow: hidden; 
   }
   .actions{
     left:0;
-    bottom:0;
+    top:0;
     position:fixed;
+    padding:20px;
+    
   }
-  .actions > #brush{
-    display:none; 
+  .actions svg{
+    width:1.5em;
+    height: 1.5em;
+    padding:0 10px;
+    transition:all 0.3s;
   }
-  .actions.x > #brush{
-    display:inline-block;
+  .actions svg.active {
+   fill:red;
+   transform: scale(1.2);
   }
-  .actions.x > #eraser{
-    display:none;
+  .colors{
+    position:fixed;
+    top:60px;
+    left:29px;
+   
+  }
+  .colors>li{
+    width:20px;
+    height: 20px;
+    box-shadow: 0 0 3px rgba(0,0, 0, 0.25);
+    margin: 10px 0;
+    border-radius:50%;
+    transition:all 0.3s;
+  }
+  .colors>li.red{
+    background:red;
+  }
+  .colors>li.green{
+    background: green;
+  }
+  .colors>li.blue{
+    background:blue;
+  }
+  .colors>li.black{
+    background:black;
+  }
+  .colors>li.active{
+    box-shadow:0 0 3px rgba(0,0, 0, 0.95);
+    transform:scale(1.2);
+  }
+  .sizes{
+    position:fixed;
+    top:10px;
+    right:20px;
+  }
+  .sizes>li{
+    margin:18px;
+  }
+  .sizes>li.thin{
+    width:20px;
+    height:6px;
+    background:black;
+  }
+  .sizes>li.thick{
+    width:20px;
+    height:12px;
+    background:black;
   }
