--- a/style.css
+++ b/style.css
@@ -61,10 +61,14 @@ canvas{
     box-shadow:0 0 3px rgba(0,0, 0, 0.95);
     transform:scale(1.2);
   }
+  .colorPicker{
+    width:20px;
+    height: 20px;
+  }
   .sizes{
     position:fixed;
-    top:10px;
-    right:20px;
+    bottom:10px;
+    left:20px;
   }
   .sizes>li{
     margin:18px;
@@ -78,4 +82,7 @@ canvas{
     width:20px;
     height:12px;
     background:black;
+  }
+  .sizes>li.thin.active,.sizes>li.thick.active{
+    transform:scale(1.2);
   }
